// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarRadio should match a snapshot - Number 1`] = `
<DocumentFragment>
  <mock-styled.input
    classname=""
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Radio 1`] = `
<DocumentFragment>
  <mock-styled.input
    classname=""
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Select 1`] = `
<DocumentFragment>
  <mock-styled.input
    classname=""
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Slider 1`] = `
<DocumentFragment>
  <mock-styled.input
    classname=""
    type="number"
    value=""
  />
</DocumentFragment>
`;

exports[`ToolbarRadio should match a snapshot - Text 1`] = `
<DocumentFragment>
  <mock-styled.input
    classname=""
    type="text"
    value=""
  />
</DocumentFragment>
`;
